--- a/app/views/dashboard_chart.scala.html
+++ b/app/views/dashboard_chart.scala.html
@@ -215,7 +215,8 @@
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.animator.min.js")"></script>
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.growraf.js")"></script>
 
-    <script src="@routes.Assets.at("javascripts/home.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/common.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/dashboard_chart.js")" type="text/javascript"></script>
 
 </body>
 
