--- a/app/views/create_dashboard.scala.html
+++ b/app/views/create_dashboard.scala.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OpenData dashboard</title>
+    <title>Create your Dashboard</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/assets/dashboard/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -215,7 +215,8 @@
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.animator.min.js")"></script>
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.growraf.js")"></script>
 
-    <script src="@routes.Assets.at("javascripts/home.js")" type="text/javascript"></script>
+    <!-- <script src="@routes.Assets.at("javascripts/common.js")" type="text/javascript"></script> -->
+    <script src="@routes.Assets.at("javascripts/create_dashboard.js")" type="text/javascript"></script>
 
 </body>
 
