--- a/app/views/create_dashboard.scala.html
+++ b/app/views/create_dashboard.scala.html
@@ -177,6 +177,7 @@
             <!-- /.row -->
             <div class="row">
               <div class="col-lg-12">
+                  <button type="button" onclick="save_dashboard()">Salva Dashboard</button>
                   <div id="chart_div">
 			      </div>
 			   </div>
