--- a/app/views/create_dashboard.scala.html
+++ b/app/views/create_dashboard.scala.html
@@ -217,7 +217,9 @@
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.growraf.js")"></script>
 
     <!-- <script src="@routes.Assets.at("javascripts/common.js")" type="text/javascript"></script> -->
-    <script src="@routes.Assets.at("javascripts/create_dashboard.js")" type="text/javascript"></script>
+    <!-- <script src="@routes.Assets.at("javascripts/create_dashboard.js")" type="text/javascript"></script> -->
+    <<script src="@routes.Assets.at("javascripts/chart_renderer.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/create_dashboard_onload.js")" type="text/javascript"></script>
 
 </body>
 
