--- a/app/views/view_dashboard.scala.html
+++ b/app/views/view_dashboard.scala.html
@@ -186,7 +186,7 @@
                           <input type="text" class="form-control" id="text_form" placeholder="Codice dashboard:">
                         </div>
                         <div class="col-sm-3">
-                          <button class="btn btn-default" onClick="visualize_dashboard()">Invia codice</button>
+                          <button class="btn btn-default" onClick="javascript:visualize_dashboard()">Invia codice</button>
                         </div>
                       </div>
                     </div>
@@ -228,7 +228,7 @@
 <script src="@routes.Assets.at("javascripts/flot-chart/jquery.flot.growraf.js")"></script>
 
     <script src="@routes.Assets.at("javascripts/common.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/view_dashboard.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/chart_renderer.js")" type="text/javascript"></script>
 
 </body>
 
