--- a/app/views/bike.scala.html
+++ b/app/views/bike.scala.html
@@ -3,4 +3,5 @@
 <span class="label label-default" style="margin:1px;">Mappa della disponibilità di biciclette</span>
 <span class="label label-default" style="inline-block; margin:1px;">Postazioni disponibili a Trento, Rovereto e Pergine</span>
 <span class="label label-default" style="inline-block; margin:1px;">Tempo di ricarica: 5s</span>
+<a href="http://www.provincia.tn.it/bikesharing"><span class="label label-info" style="inline-block; margin:1px;">Pagina web e.motion bikesharing</span></a>
 <div style="height:10px"></div>
