--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -175,6 +175,9 @@
             @if(page_type.equals("campodenno")) {
                 @views.html.campodenno()
             }
+            @if(page_type.equals("fotovoltaico")) {
+                @views.html.fotovoltaico()
+            }
             
 
             <!-- /.row -->
@@ -234,6 +237,9 @@
     @if(page_type.equals("campodenno")) {
         <script src="@routes.Assets.at("javascripts/realtime/campodenno.js")" type="text/javascript"></script>
         
+    }
+    @if(page_type.equals("fotovoltaico")) {
+        <script src="@routes.Assets.at("javascripts/realtime/fotovoltaico.js")" type="text/javascript"></script>
     }
 
 </body>
