add start and some comment

--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -178,6 +178,9 @@
             @if(page_type.equals("fotovoltaico")) {
                 @views.html.fotovoltaico()
             }
+            @if(page_type.equals("start")) {
+                @views.html.start()
+            }
             
 
             <!-- /.row -->
