--- a/app/views/realtime_list.scala.html
+++ b/app/views/realtime_list.scala.html
@@ -4,7 +4,7 @@
         <a href="/realtime/bike">Bikesharing e-motion</a>
     </li>
     <li>
-        <a href="/realtime/campodenno">Stazione di campodenno</a>
+        <a href="/realtime/campodenno">Sensori di Campodenno</a>
     </li>
     <li>
         <a href="/realtime/fotovoltaico">Dati fotovoltaico PAT</a>
