--- a/app/views/create_dashboard.scala.html
+++ b/app/views/create_dashboard.scala.html
@@ -5,3 +5,30 @@
         </div>
     </div>
 </div>
+
+<!-- Link Modal -->
+<div class="container">
+    <div class="row">
+    <div class="modal fade in" id="dashboardModal" role="dialog" tabindex="-1" aria-hidden="false">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header" style="padding:35px 50px; background-color: green;">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <center><h2 style="color:white;">Dashboard salvata!</h2></center>
+            </div>
+            <div class="modal-body" style="padding:40px 50px;">
+                 <center><p>Dashboard disponibile all'indirizzo:</p></center>
+                <center><a href="" id="href_dashboard"> <p id="link_dashboard"></p></a></center>
+                <center><p>Oppure salva questo codice:</p></center>
+                <center><p id="code_dashboard"></p></center>
+                <center><p>e riutilizzalo nella &nbsp;<a href="/view_dashboard">pagina apposita</a></p></center>
+            </div>
+               
+          </div>
+          
+        </div>
+    </div>
+    </div>
+</div>
